# Slay-the-Spire-2-RL-

./: README.md  pyproject.toml
docs/architecture/: live-game-interaction-layer-investigation.md  live-game-interaction-layer.md  simulator-connection.md
docs/research/: rl-agent-reading-list.md
docs/superpowers/plans/: 2026-05-22-rl-agent-architecture-prep.md  2026-05-23-live-interaction-layer.md
scripts/: live_smoke.py
src/sts2_rl/: __init__.py
src/sts2_rl/live/: __init__.py  action_mapper.py  game_client.py  legal_actions.py  normalizer.py  sts2mcp_client.py  types.py  wait.py
tests/live/: test_action_mapper.py  test_game_client.py  test_legal_actions.py  test_live_smoke.py  test_normalizer.py  test_package_import.py  test_sts2mcp_client.py  test_types.py  test_wait.py
